# SWIG-Tests

./: .gitignore  CMakeLists.txt  LICENSE  README.md  swig_tests.i  test_swig.py
wrapping_handles/: swig_tests.i  test_swig.py
wrapping_matrices/: CMakeLists.txt  eigen2numpy.i  matrix2numpy.i  pyfragments.swg  test_eigen2numpy.py
